Scrollbar and Sender font fixes.

--- a/Pretty Simple.adiummessagestyle/Contents/Resources/Main.css
+++ b/Pretty Simple.adiummessagestyle/Contents/Resources/Main.css
@@ -45,12 +45,12 @@ div {
 }
 
 span.time, span.timeC, span.sender, span.statusMsg {
-	font-family: Helvetica Neue;
+	font-family: Monaco;
 	font-weight: 100;
 }
 
 span.statusMsg {
-	font-size: 15px;
+	font-size: 10px;
 }
 
 div.incoming, div.outgoing, div.status {
@@ -119,7 +119,7 @@ div.status img {
 }
 
 span.sender {
-		font-size: 18px;
+		font-size: 12px;
 }
 
 div.message {
@@ -128,7 +128,7 @@ div.message {
 	padding: 0;
 	margin-top: 4px;
 	font-weight: 100;
-	color: rgba(255,255,255, 0.8);
+	color: rgba(255,255,255, 1.0);
 	text-align: justify;
 }
 
